finishing the documentation with vuese

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,6 @@
         JavaScript enabled. Please enable it to continue.</strong
       >
     </noscript>
-    <div id="app"></div>
+    <div id="App"></div>
   </body>
 </html>
