--- a/website/index.html
+++ b/website/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="docute"></div>
-    <script src="https://unpkg.com/docute@4/dist/docute.js"></script>
+    <!-- <script src="https://unpkg.com/docute@4/dist/docute.js"></script> -->
     <script>
       new Docute({
         target: "#docute",
