--- a/website/index.html
+++ b/website/index.html
@@ -12,6 +12,11 @@
   <body>
     <div id="docute"></div>
     <script src="https://unpkg.com/docute@4/dist/docute.js"></script>
-    <script src="./docute.js"></script>
+    <!-- <script>
+      new Docute({
+        target: '#docute',
+        sidebar: JSON.parse('[{&#34;title&#34;:&#34;BASIC&#34;,&#34;links&#34;:[{&#34;title&#34;:&#34;App&#34;,&#34;link&#34;:&#34;/components/App&#34;},{&#34;title&#34;:&#34;DataSection&#34;,&#34;link&#34;:&#34;/components/DataSection&#34;},{&#34;title&#34;:&#34;Graph&#34;,&#34;link&#34;:&#34;/components/Graph&#34;},{&#34;title&#34;:&#34;ToggleButton&#34;,&#34;link&#34;:&#34;/components/ToggleButton&#34;}]}]'.replace(/\&\#34\;/g, '"'))
+      })
+    </script> -->
   </body>
 </html>
